--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "express": "^4.18.2",
     "pg": "^8.10.0"
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "ejs": "^3.1.9",
     "eslint": "^8.36.0",
     "eslint-config-standard": "^17.0.0",
